--- a/cards.html
+++ b/cards.html
@@ -375,7 +375,7 @@
                 <div class="collapse show" id="collapseCardExample">
                   <div class="card-body">
                     6 Week Summer Session
-                    <a href="https://elaine2018.github.io/MSTU-5013-final/">Project Repository</a>
+                    <a href="https://elaine2018.github.io/project-repository/">Project Repository</a>
                   </div>
                 </div>
               </div>
